jvm gc 내용 보충